adding react troublleee

--- a/web/header.html
+++ b/web/header.html
@@ -7,13 +7,18 @@
     <meta name="description" content="Plateforme complète pour coaching">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Théophile de Cagny">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- production version, optimized for size and speed -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>-->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script>var exports = {"__esModule": true};</script>
 </head>
 <body>
     <navbar>
         <div class="navbar-wrapper">
             <div class="logo-section">
                 <div class="logo-wrapper">
-                    <span class="first-logo-span">Coach</span><span class="second-logo-span">Lab</span>
+                    <a href="/"><span class="first-logo-span">Coach</span><span class="second-logo-span">Lab</span></a>
                 </div>
             </div>
             <div class="menu-section">
