agenda well under way

--- a/priv/static/header.html
+++ b/priv/static/header.html
@@ -12,22 +12,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js" crossorigin></script>
     <script src="https://use.fontawesome.com/d9323d863e.js"></script>
     <script src="https://kit.fontawesome.com/d9d5875839.js" crossorigin="anonymous"></script>
-    <script src="./priv/static/http.js"></script>
+    <script src="/priv/static/http.js"></script>
 </head>
 <body>
-    <navbar>
-        <div class="navbar-wrapper">
-            <div class="logo-section">
-                <div class="logo-wrapper">
-                    <a href="/"><span class="first-logo-span">Coach</span><span class="second-logo-span">Lab</span></a>
-                </div>
-            </div>
-            <div class="menu-section">
-                <div class="menu-item"><a href="/agenda"> Mon Agenda</a></div>
-                <div class="menu-item"><a href="/profil">Mes infos</a></div>
-                <!-- <div class="menu-item user-dropdown">Jonh Doe &nbsp;<span class="downward-arrow">&#9660;</span></div> -->
-                <div class="menu-item login"><a href="/connexion">Se connecter</a></div>
-            </div>
-        </div>
-    </navbar>
     
