--- a/web/landing.html
+++ b/web/landing.html
@@ -1,6 +1,5 @@
-<h1 class="page-title">Bienvenue sur &nbsp;<div class="logo-section"> 
-        <span class="first-logo-span">Coach</span><span class="second-logo-span">Lab</span>
-</div> !</h1>
-<div id="like_button_container"></div>
+<div class="landing-wrapper">
 
-<script src="./priv/static/landing.js"></script>
+</div>
+
+<script src="./priv/static/landing.js" type="module"></script>
