took out useless code, added minifying js, fixed supervision tree

--- a/web/header.html
+++ b/web/header.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Plateforme complète pour coaching">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Théophile de Cagny">
+    <!-- @TODO: change development for production, by using eex & mix env for example -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js" crossorigin></script>
