--- a/web/footer.html
+++ b/web/footer.html
@@ -2,8 +2,8 @@
 <footer class="footer">
     <div>Contact us: <a class="contact-mail" href="mailto:contact@coachlab.fr">contact@coachlab.fr</a></div>
 </footer>
-<!-- Load React. -->
-  <!-- @TODO: Note: when deploying, replace "development.js" with "production.min.js". -->
   <link rel="stylesheet" href="/priv/static/custom.css"> 
+  <script type="module" src="/priv/static/footer.js"></script>
+</div>
 </body>
 </html>
